--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Marketing Agency In Chennai</title>
-    <link rel="shortcut icon" href="./assets/images/logo.PNG" type="image/x-icon">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="logo.PNG" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./responsive.css">
-    <link rel="stylesheet" href="./unlockYour.css">
-    <link rel="stylesheet" href="./navBar.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="unlockYour.css">
+    <link rel="stylesheet" href="navBar.css">
 </head>
 
 <body>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="bottomBody grid-2">
                     <figure class="logo">
-                        <img src="./assets/images/navLogo.png" alt="iRemoteLogo">
+                        <img src="navLogo.png" alt="iRemoteLogo">
                     </figure>
                     <ul class="navLinks">
                         <li><a href="#">Home</a></li>
@@ -94,73 +94,73 @@
                 <div class="cardBody grid-3">
                     <div class="cardPics dflex-col">
                         <figure>
-                            <img src="./assets/images/digitalCard.PNG" alt="Digital Marketing">
+                            <img src="digitalCard.PNG" alt="Digital Marketing">
                         </figure> 
                         <h3>Digital Marketing</h3>
                     </div>
                     <div class="cardPics dflex-col">
                         <figure>
-                            <img src="./assets/images/seoCard.PNG" alt="SEO">
+                            <img src="seoCard.PNG" alt="SEO">
                         </figure>
                         <h3>SEO</h3>
                     </div>
                     <div class="cardPics dflex-col">
                         <figure>
-                            <img src="./assets/images/webdesignCard.PNG" alt="Website Design">
+                            <img src="webdesignCard.PNG" alt="Website Design">
                         </figure>
                         <h3>Website Design</h3>
                     </div>
                     <div class="cardPics dflex-col">
                         <figure>
-                            <img src="./assets/images/websiteHoistingCard.PNG" alt="Web Hosting">
+                            <img src="websiteHoistingCard.PNG" alt="Web Hosting">
                         </figure>
                         <h3>Web Hosting</h3>
                     </div>
                     <div class="cardPics dflex-col">
                         <figure>
-                            <img src="./assets/images/socialMediaCard.PNG" alt="Social Media Marketing">
+                            <img src="socialMediaCard.PNG" alt="Social Media Marketing">
                         </figure>
                         <h3>Social Media Marketing</h3>
                     </div>
                     <div class="cardPics dflex-col">
                         <figure>
-                            <img src="./assets/images/videoEditingCard.PNG" alt="Video Editing">
+                            <img src="videoEditingCard.PNG" alt="Video Editing">
                         </figure>
                         <h3>Video Editing</h3>
                     </div>
                     <div class="cardPics dflex-col">
                         <figure>
-                            <img src="./assets/images/contentMarketingCard.PNG" alt="Content Marketing">
+                            <img src="contentMarketingCard.PNG" alt="Content Marketing">
                         </figure>
                         <h3>Content Marketing</h3>
                     </div>
                     <div class="cardPics dflex-col">
                         <figure>
-                            <img src="./assets/images/googleAdsCard.PNG" alt="Google Ads">
+                            <img src="googleAdsCard.PNG" alt="Google Ads">
                         </figure>
                         <h3>Google Ads</h3>
                     </div>
                     <div class="cardPics dflex-col">
                         <figure>
-                            <img src="./assets/images/facebookCard.PNG" alt="Facebook & Insta Ads">
+                            <img src="facebookCard.PNG" alt="Facebook & Insta Ads">
                         </figure>
                         <h3>Facebook & Insta Ads</h3>
                     </div>
                     <div class="cardPics dflex-col">
                         <figure>
-                            <img src="./assets/images/mapListingCard.PNG" alt="Map Listings & Seo">
+                            <img src="mapListingCard.PNG" alt="Map Listings & Seo">
                         </figure>
                         <h3>Map Listings & Seo</h3>
                     </div>
                     <div class="cardPics dflex-col">
                         <figure>
-                            <img src="./assets/images/virtualStoreCard.PNG" alt="360 Virtual Store">
+                            <img src="virtualStoreCard.PNG" alt="360 Virtual Store">
                         </figure>
                         <h3>360 Virtual Store</h3>
                     </div>
                     <div class="cardPics dflex-col">
                         <figure>
-                            <img src="./assets/images/graphicDesignCard.PNG" alt="Graphic Design">
+                            <img src="graphicDesignCard.PNG" alt="Graphic Design">
                         </figure>
                         <h3>Graphic Design</h3>
                     </div>
